--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,8 @@
   ],
   "require": {
     "php": "^8.0",
+    "enlightn/enlightn": "^1.0",
     "illuminate/filesystem": "^8.0"
-  },
-  "require-dev": {
-    "enlightn/enlightn": "^1.0"
   },
   "autoload": {
     "psr-4": {
