--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     }
   ],
   "require": {
-    "php": "^8.0",
+    "php": "^7.2|^8.0",
     "enlightn/enlightn": "^1.0",
     "illuminate/filesystem": "^8.0"
   },
