--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "require": {
     "php": "^7.2|^8.0",
     "enlightn/enlightn": "^1.0",
-    "illuminate/filesystem": "^8.0"
+    "illuminate/filesystem": "^7.0|^8.0"
   },
   "autoload": {
     "psr-4": {
