--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,8 @@
     }
   ],
   "require": {
-    "php": "^7.2|^8.0",
-    "enlightn/enlightn": "^1.0",
-    "illuminate/filesystem": "^7.0|^8.0"
+    "php": "^8.0",
+    "enlightn/enlightn": "^1.0"
   },
   "autoload": {
     "psr-4": {
